MDEV-19831 find_select_handler() now tries its best to find a handlerton that     is able to processes the whole query. For that it traverses tables from     subqueries.

Select_handler now cleans up temporary table structures on dctor call.

    Enable outer to inner JOIN rewrites for smart engine Select handler.